--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -478,3 +478,47 @@ h2,
     object-fit: contain;
   }
 }
+
+.breadcrumbs {
+
+  /* Navigation */
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%; /* 2.34rem */
+
+  position: relative;
+  z-index: 1;
+  margin-bottom: 4rem;
+  @include breakpoint($xl-bp) {
+    font-size: 1.4rem;
+  }
+}
+
+.breadcrumbs-li {
+  display: inline;
+    &::after {
+      content: '';
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6' height='9' viewBox='0 0 6 9' fill='none'%3E%3Cpath d='M1 0.5L5 4.5L1 8.5' stroke='white'/%3E%3C/svg%3E");
+      width: 0.6rem;
+      height: 0.9rem;
+      display: inline-block;
+      margin: 0 1.5rem;
+      margin-right: 1rem;
+      flex: 0 0 auto;
+      background-size: contain;
+      background-repeat: no-repeat;
+      position: relative;
+      top: -0.2rem;
+      @include breakpoint($xl-bp) {
+        top: 0;
+      }
+    }
+
+    &:last-child {
+      color: var(--text-grey-dark, #5D5D5D);
+      &::after {
+        content: normal;
+      }
+    }
+}
